feat: firebase auth

--- a/src/app/shared/components/profile/profile.component.html
+++ b/src/app/shared/components/profile/profile.component.html
@@ -5,6 +5,6 @@
     </div>
     <mat-menu #menu="matMenu">
         <button mat-menu-item>My Quotes</button>
-        <button mat-menu-item>Logout</button>
+        <button mat-menu-item (click)="closeSession()">Logout</button>
     </mat-menu>
 </div>
