--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -2,7 +2,6 @@
   <mat-toolbar color="primary">
     <a [routerLink]="['/']" ><span>Breaking Bad Social Media</span></a>
     <span class="spacer"></span>
-    <app-profile></app-profile>
-    <!-- <app-cart class="mouse-hover" (click)="goToCheckout()"></app-cart> -->
+    <app-profile *ngIf="getLogin() == true"></app-profile>
   </mat-toolbar>
 </p>
