--- a/src/app/shared/components/profile/profile.component.html
+++ b/src/app/shared/components/profile/profile.component.html
@@ -1,10 +1,12 @@
 <div >
     <div class="main mouse-hover" mat-button [matMenuTriggerFor]="menu">
-        <div class="name">Nombre Usuario</div>
-        <img src="assets/profile.png" alt="Profile" >
+        <mat-icon>more_vert</mat-icon>
+        <!-- <div class="name">Nombre Usuario</div> -->
+        <!-- <img src="assets/profile.png" alt="Profile" > -->
     </div>
     <mat-menu #menu="matMenu">
-        <button mat-menu-item>My Quotes</button>
+        <!-- <button mat-menu-item>My Quotes</button> -->
+        <button mat-menu-item (click)="resetProject()">Reset Quotes</button>
         <button mat-menu-item (click)="closeSession()">Logout</button>
     </mat-menu>
 </div>
