--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -2,6 +2,7 @@
   <mat-toolbar color="primary">
     <a [routerLink]="['/']" ><span>Breaking Bad Social Media</span></a>
     <span class="spacer"></span>
+    <app-add *ngIf="getLogin() == true"></app-add>
     <app-profile *ngIf="getLogin() == true"></app-profile>
   </mat-toolbar>
 </p>
